--- a/head/acknowledgements.tex
+++ b/head/acknowledgements.tex
@@ -11,7 +11,7 @@ I would like to thank professors Sandra Hirche from Technische Universität Mün
 
 The Laboratoire d'Automatique is a great place to do your PhD at. The group is diverse and amicable, people are intellectually bright, and the atmosphere is on point. Here is a list of people that helped me during the course of my doctorate: Alessio, Baiwei, Clara, Harsh, Johannes, Johannes, Mustafa, Paul, Peter, Philippe, Pulkit, Roland, Sohail, Yingzhao, Yuning. You have contributed to making both my academic and my personal life richer and more fun.
 
-The foremost group is certainly my wife and my family. I have an immense respect for my parents who have risen their children ensuring the absorption of important core values, including mutual respect, fairness and empathy. To this day, I look up to you. \textit{Muito obrigado por tudo}, Bruno, Erica, Fabio and Renato. Vivi has given me support, advice and love, aiding me in every single moment of the last years. Thank you, truly! 
+The final group I need to acknowledge is my wife and my family. I have an immense respect for my parents who have risen me and my brothers ensuring the absorption of important core values, including fairness, empathy and hard work, through demonstrating them with their daily actions. \textit{Muito obrigado}, Bruno, Erica, Fabio and Renato -- I look up to you. Vivi has given me support, advice, company and love, aiding me in every single moment of the last years. Thank you, truly! 
 
 \bigskip
  
