--- a/main/chap1_introduction.tex
+++ b/main/chap1_introduction.tex
@@ -1,7 +1,17 @@
 \cleardoublepage
 \chapter{Introduction}
 \markboth{Introduction}{Introduction}
-A non-numbered chapter\dots
+
+Artificial intelligence (AI) and machine learning (ML) are on the rise. Both terms, often used interchangeably, are nowadays an integral part of the popular culture, being referenced in various shows, movies, and books written by laymen. Recent AI milestones that endorse the idea that important progress is being made include the 2016 AlphaGo's victory agains a 9-dan Go player in a 5-game match \citep{silver2016mastering}, and the OpenAI generative models DALL$\cdot$E and ChatGPT, which showcased impressive performance and drew the attention of the general population. On the business-side of the spectrum, companies are also trying to leverage the power of AI and ML to automate tasks, optimize processes and enhance productivity \citep{Chui2022}. Indeed, both AI and ML are often referred to by consulting firms as disruptive technologies whose potential is yet to be fully explored \citep{Bechtel2022}. These advances and excitement are generally associated with two central driving factors: the development of more sophisticated algorithms and the ever-growing availability of data.
+
+Contrast the main success stories of AI or RL with engineering fields. Funnel down to automatic control.
+
+Point out the lack of experimental investigations for some of the techniques.
+
+Discuss robust analysis and control, and talk about ml algos.
+
+Identify the gap in the literature.
+
 
 \section{Outline and Contribution}
 
@@ -22,23 +32,17 @@ The subsequent chapters of this dissertation were based on the following publica
 	
 \end{itemize}
 
-Works developed during the course of this PhD that are related to the thesis, but not discussed herein include:
+Works developed during the course of this PhD that are not discussed herein include:
 
-\begin{itemize}
-	\item E. T. Maddalena, M. W. F. Specq, V. L. Wisniewski, and C. N. Jones. ``Embedded PWM predictive control of DC-DC power converters via piecewise-affine neural networks." IEEE Open Journal of the Industrial Electronics Society (2021): 199-206.
+\begin{itemize}	
+	\item F-X Chalet, T. Bujaroska, E. Germeni, N. Ghandri, E. T. Maddalena, K. Modi, A. Olopoenia, J. Thompson, M. Togninalli and A. H. Briggs. ``Mapping the Insomnia Severity Index Instrument to EQ‑5D Health State Utilities: A United Kingdom Perspective." PharmacoEconomics - Open (2023).
+	
+	\item U. Rosolia, Y. Lian, E. T. Maddalena, G. Ferrari-Trecate, and C. N. Jones ``On the Optimality and Convergence Properties of the Iterative Learning Model Predictive Controller." IEEE Transactions on Automatic Control 68.1 (2022): 556-563.	
+	
+	\item W. Xu, Y. Jiang, E. T. Maddalena and C. N. Jones. ``Lower bounds on the worst-case complexity of efficient global optimization." arXiv preprint arXiv:2209.09655 (2022).
+		
+	\item A. Chakrabarty, E. T. Maddalena, H. Qiao, and C. Laughman. ``Scalable Bayesian optimization for model calibration: Case study on coupled building and HVAC dynamics." Energy and Buildings (2021) 253, 111460
 	
 	\item E.T. Maddalena, and C. N. Jones. ``NSM converges to a k-NN regressor under loose Lipschitz estimates." IEEE Control Systems Letters  134 (2020): 880-885.
-	
-	\item E. T. Maddalena, C. G. S. Moraes, G. Waltrich, and C. N. Jones. ``A neural network architecture to learn explicit MPC controllers from data." IFAC-PapersOnLine (2020): 11362-11367.
-	
-	\item A. Chakrabarty, E. T. Maddalena, H. Qiao, and C. Laughman. ``Scalable Bayesian optimization for model calibration: Case study on coupled building and HVAC dynamics." Energy and Buildings 253, 111460
-	
-	\item E. T. Maddalena, and C. N. Jones. ``Learning non-parametric models with guarantees: A smooth Lipschitz regression approach."  IFAC-PapersOnLine (2020): 965-970.
-	
-	\item U. Rosolia, Y. Lian, E. T. Maddalena, G. Ferrari-Trecate, and C. N. Jones ``On the Optimality and Convergence Properties of the Iterative Learning Model Predictive Controller." IEEE Transactions on Automatic Control.
-	
-	\item L. di Natale, Y. Lian, E. T. Maddalena, J. Shi, and C. N. Jones ``Lessons Learned from Data-Driven Building Control Experiments: Contrasting Gaussian Process-based MPC, Bilevel DeePC, and Deep Reinforcement Learning." arXiv.
-	
-	
-	
+		
 \end{itemize}
