--- a/tail/bibliography.bib
+++ b/tail/bibliography.bib
@@ -87,6 +87,145 @@
 	publisher={Elsevier}
 }
 
+@article{hullermeier2021aleatoric,
+	title={Aleatoric and epistemic uncertainty in machine learning: An introduction to concepts and methods},
+	author={H{\"u}llermeier, Eyke and Waegeman, Willem},
+	journal={Machine Learning},
+	volume={110},
+	pages={457--506},
+	year={2021},
+	publisher={Springer}
+}
+
+@article{milanese1991optimal,
+	title={Optimal estimation theory for dynamic systems with set membership uncertainty: An overview},
+	author={Milanese, Mario and Vicino, Antonio},
+	journal={Automatica},
+	volume={27},
+	number={6},
+	pages={997--1009},
+	year={1991},
+	publisher={Elsevier}
+}
+
+@article{sabug2021smgo,
+	title={SMGO: A set membership approach to data-driven global optimization},
+	author={Sabug Jr, Lorenzo and Ruiz, Fredy and Fagiano, Lorenzo},
+	journal={Automatica},
+	volume={133},
+	pages={109890},
+	year={2021},
+	publisher={Elsevier}
+}
+
+@article{novara2022nonlinear,
+	title={Nonlinear system identification in Sobolev spaces},
+	author={Novara, Carlo and Nicol{\`\i}, Angelo and Calafiore, Giuseppe C},
+	journal={International Journal of Control},
+	pages={1--16},
+	year={2022},
+	publisher={Taylor \& Francis}
+}
+
+@inproceedings{belkin2018approximation,
+	title={Approximation beats concentration? an approximation view on inference with smooth radial kernels},
+	author={Belkin, Mikhail},
+	booktitle={Conference On Learning Theory},
+	pages={1348--1361},
+	year={2018},
+	organization={PMLR}
+}
+
+@article{schaback2006kernel,
+	title={Kernel techniques: from machine learning to meshless methods},
+	author={Schaback, Robert and Wendland, Holger},
+	journal={Acta numerica},
+	volume={15},
+	pages={543--639},
+	year={2006},
+	publisher={Cambridge University Press}
+}
+
+@article{sarra2005adaptive,
+	title={Adaptive radial basis function methods for time dependent partial differential equations},
+	author={Sarra, Scott A},
+	journal={Applied Numerical Mathematics},
+	volume={54},
+	number={1},
+	pages={79--94},
+	year={2005},
+	publisher={Elsevier}
+}
+
+@article{nikan2022numerical,
+	title={Numerical approximation of the time fractional cable model arising in neuronal dynamics},
+	author={Nikan, Omid and Golbabai, Ahmad and Machado, JA Tenreiro and Nikazad, Touraj},
+	journal={Engineering with Computers},
+	volume={38},
+	number={1},
+	pages={155--173},
+	year={2022},
+	publisher={Springer}
+}
+
+@book{d2013bounded,
+	title={Bounded noises in physics, biology, and engineering},
+	author={d'Onofrio, Alberto},
+	year={2013},
+	publisher={Springer}
+}
+
+@article{scikit-learn,
+	title={Scikit-learn: Machine Learning in {P}ython},
+	author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+	and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+	and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+	Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+	journal={Journal of Machine Learning Research},
+	volume={12},
+	pages={2825--2830},
+	year={2011}
+}
+
+
+@article{milanese2004set,
+	title={Set membership identification of nonlinear systems},
+	author={Milanese, Mario and Novara, Carlo},
+	journal={Automatica},
+	volume={40},
+	number={6},
+	pages={957--975},
+	year={2004},
+	publisher={Elsevier}
+}
+
+@article{silver2016mastering,
+	title={Mastering the game of Go with deep neural networks and tree search},
+	author={Silver, David and Huang, Aja and Maddison, Chris J and Guez, Arthur and Sifre, Laurent and Van Den Driessche, George and Schrittwieser, Julian and Antonoglou, Ioannis and Panneershelvam, Veda and Lanctot, Marc and others},
+	journal={nature},
+	volume={529},
+	number={7587},
+	pages={484--489},
+	year={2016},
+	publisher={Nature Publishing Group}
+}
+
+@Online{Chui2022,
+	author = {Michael Chui and Roger Roberts and Lareina Yee},
+	year = {2022},
+	title = {{Generative AI is here: How tools like ChatGPT could change your business}},
+	url = {https://www.mckinsey.com/capabilities/quantumblack/our-insights/generative-ai-is-here-how-tools-like-chatgpt-could-change-your-business},
+	urldate = {2023-01-31}
+}
+
+@Online{Bechtel2022,
+	author = {Mike Bechtel},
+	year = {2022},
+	title = {{Opening up to AI: Learning to trust our AI colleagues}},
+	url = {https://www2.deloitte.com/us/en/insights/focus/tech-trends.html#opening-up-to-ai},
+	urldate = {2023-01-31}
+}
+
 @inproceedings{nghiem2017data,
 	title={Data-driven demand response modeling and control of buildings with gaussian processes},
 	author={Nghiem, Truong X and Jones, Colin N},
