--- a/my_thesis.tex
+++ b/my_thesis.tex
@@ -32,15 +32,15 @@
 \tableofcontents
 
 % % Following content is OPTIONAL (List of figures + tables)
-% \cleardoublepage
-% \phantomsection
-% \addcontentsline{toc}{chapter}{List of Figures} % adds an entry to the table of contents
-% \listoffigures
-% 
-% \cleardoublepage
-% \phantomsection
-% \addcontentsline{toc}{chapter}{List of Tables} % adds an entry to the table of contents
-% \listoftables
+ \cleardoublepage
+ \phantomsection
+ \addcontentsline{toc}{chapter}{List of Figures} % adds an entry to the table of contents
+ \listoffigures
+ 
+ \cleardoublepage
+ \phantomsection
+ \addcontentsline{toc}{chapter}{List of Tables} % adds an entry to the table of contents
+ \listoftables
 % your list of symbols here, if needed.
 
 
